# Quants

./: .gitignore  CMakeLists.txt  README.md
Quants/: CMakeLists.txt
Quants/include/Quants/: Constants.hpp  Dimension.hpp  Quantity.hpp  Quants.hpp  Unit.hpp  Units.hpp  VectorQuantity.hpp
Quants/include/Quants/Units/: Angles.hpp  Astronomy.hpp  Base.hpp  Electromagnetism.hpp  Mechanics.hpp  Molecular.hpp  Optics.hpp
docs/: Doxyfile
example/: CMakeLists.txt  main.cpp
tests/: BasicFormulas.cpp  CMakeLists.txt  Conversion.cpp  Math.cpp  VectorMath.cpp
